proc-macro-error-test/tests/ui/result_expect.stderr
error: Result::expect_or_exit() test: error
 --> $DIR/result_expect.rs:5:10
  |
5 | make_fn!(result_expect);
  |          ^^^^^^^^^^^^^
